--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <p class="lead">简要说明</p>
     </div>
   </div>
-<!--
+  <!--
   <td class="col-1">
     <p id="tt">传入数值</p>
   </td>
@@ -75,22 +75,23 @@
     <br>
     <table class="table">
       <tr class="row justify-content-around align-content-center font-weight-bold">
-        <td class="col-2 "></td>
-        <td class="col-1">合计</td>
-        <td class="col-1">封印</td>
-        <td class="col-1">自身</td>
-        <td class="col-1">武器</td>
-        <td class="col-1">宝石1</td>
-        <td class="col-1">宝石2</td>
-        <td class="col-1">宝石3</td>
+        <td class="col-2  text-center"></td>
+        <td class="col-1 text-center">合计</td>
+        <td class="col-1 text-center">封印</td>
+        <td class="col-1 text-center">自身</td>
+        <td class="col-1 text-center">武器</td>
+        <td class="col-1 text-center">宝石1</td>
+        <td class="col-1 text-center">宝石2</td>
+        <td class="col-1 text-center">宝石3</td>
       </tr>
 
       <tr class=" row justify-content-around align-content-center">
         <td class="col-2 font-weight-bold">额外攻击力</td>
         <td class="col-1">
-          <p id="a11">20</p>
+          <p class="text-center" id="a11">20</p>
         </td>
-        <td class="col-1"><input type="number" onchange="sum(1)" id="a12" min="0" onClick="this.select();" value="20" /></td>
+        <td class="col-1"><input type="number" onchange="sum(1)" id="a12" min="0" onClick="this.select();" value="20" />
+        </td>
         <td class="col-1"><input type="number" onchange="sum(1)" id="a13" min="0" onClick="this.select();" /></td>
         <td class="col-1"><input type="number" onchange="sum(1)" id="a14" min="0" onClick="this.select();" /></td>
         <td class="col-1"><input type="number" onchange="sum(1)" id="a15" min="0" onClick="this.select();" /></td>
@@ -100,7 +101,7 @@
       <tr class="row justify-content-around align-content-center">
         <td class="col-2 font-weight-bold">武器攻击力</td>
         <td class="col-1">
-          <p id="a21">0</p>
+          <p class="text-center" id="a21">0</p>
 
         </td>
         <td class="col-1"><input type="number" onchange="sum(2)" id="a22" min="0" onClick="this.select();" /></td>
@@ -113,7 +114,7 @@
       <tr class="row justify-content-around align-content-center">
         <td class="col-2 font-weight-bold">武器攻击力%</td>
         <td class="col-1">
-          <p id="a31">0</p>
+          <p class="text-center" id="a31">0</p>
         </td>
         <td class="col-1"><input type="number" onchange="sum(3)" id="a32" min="0" onClick="this.select();" /></td>
         <td class="col-1"><input type="number" onchange="sum(3)" id="a33" min="0" onClick="this.select();" /></td>
@@ -125,7 +126,7 @@
       <tr class="row justify-content-around align-content-center">
         <td class="col-2 font-weight-bold">战术攻</td>
         <td class="col-1">
-          <p id="a41">0</p>
+          <p class="text-center" id="a41">0</p>
         </td>
         <td class="col-1"><input type="number" onchange="sum(4)" id="a42" min="0" onClick="this.select();" /></td>
         <td class="col-1"><input type="number" onchange="sum(4)" id="a43" min="0" onClick="this.select();" /></td>
@@ -137,10 +138,11 @@
       <tr class="row justify-content-around align-content-center">
         <td class="col-2 font-weight-bold">攻击力倍率</td>
         <td class="col-1">
-          <p id="a51" >1</p>
+          <p class="text-center" id="a51">1</p>
         </td>
         <td class="col-1"><input type="number" onchange="sum(5)" id="a52" min="0" onClick="this.select();" /></td>
-        <td class="col-1"><input type="number" onchange="sum(5)" id="a53" min="1" onClick="this.select();" value="1" /></td>
+        <td class="col-1"><input type="number" onchange="sum(5)" id="a53" min="1" onClick="this.select();" value="1" />
+        </td>
         <td class="col-1"><input type="number" onchange="sum(5)" id="a54" min="0" onClick="this.select();" /></td>
         <td class="col-1"><input type="number" onchange="sum(5)" id="a55" min="0" onClick="this.select();" /></td>
         <td class="col-1"><input type="number" onchange="sum(5)" id="a56" min="0" onClick="this.select();" /></td>
@@ -149,7 +151,7 @@
       <tr class="row justify-content-around align-content-center">
         <td class="col-2 font-weight-bold">持续伤害</td>
         <td class="col-1">
-          <p id="a61">0</p>
+          <p class="text-center" id="a61">0</p>
         </td>
         <td class="col-1"><input type="number" onchange="sum(6)" id="a62" min="0" onClick="this.select();" /></td>
         <td class="col-1"><input type="number" onchange="sum(6)" id="a63" min="0" onClick="this.select();" /></td>
@@ -159,7 +161,7 @@
         <td class="col-1"><input type="number" onchange="sum(6)" id="a67" min="0" onClick="this.select();" /></td>
       </tr>
 
-<!--
+      <!--
        <tr class="row justify-content-around align-content-center">
         <td class="col-12"><input type="button" class="btn btn-primary" value="计算合计" onClick="jshj()" /></td>
       </tr> -->
@@ -186,12 +188,12 @@
         <td class="col-5">生效方式</td>
       </tr>
       <tr class="row  justify-content-around align-content-center">
-        <td class="col-1"><input type="number" id="b11" value="1" /></td>
+        <td class="col-1"><input type="number" id="b11" value="1" onClick="this.select();" /></td>
         <td class="col-2">额外攻击力</td>
-        <td class="col-1"><input type="number" id="b13" value="1" /></td>
-        <td class="col-1"><input type="number" id="b14" value="10" /></td>
-        <td class="col-1"><input type="number" id="b15" value="1" /></td>
-        <td class="col-1"><input type="number" id="b16" value="1" /></td>
+        <td class="col-1"><input type="number" id="b13" value="1" onClick="this.select();" /></td>
+        <td class="col-1"><input type="number" id="b14" value="10" onClick="this.select();" /></td>
+        <td class="col-1"><input type="number" id="b15" value="1" onClick="this.select();" /></td>
+        <td class="col-1"><input type="number" id="b16" value="1" onClick="this.select();" /></td>
         <td class="col-5">
           <p>轻型：额外攻击+武器攻击力*(2.25+2.25*武器攻击力%+战术攻)<br />
             中型：额外攻击+武器攻击力*(3.0625+3.0625*武器攻击力%+战术攻)<br />
@@ -200,12 +202,12 @@
         </td>
       </tr>
       <tr class="row  justify-content-around align-content-center">
-        <td class="col-1"><input type="number" id="b21" value="1" /></td>
+        <td class="col-1"><input type="number" id="b21" value="1" onClick="this.select();" /></td>
         <td class="col-2">武器攻击力</td>
-        <td class="col-1"><input type="number" id="b23" value="1" /></td>
-        <td class="col-1"><input type="number" id="b24" value="10" /></td>
-        <td class="col-1"><input type="number" id="b25" value="1" /></td>
-        <td class="col-1"><input type="number" id="b26" value="1" /></td>
+        <td class="col-1"><input type="number" id="b23" value="1" onClick="this.select();" /></td>
+        <td class="col-1"><input type="number" id="b24" value="10" onClick="this.select();" /></td>
+        <td class="col-1"><input type="number" id="b25" value="1" onClick="this.select();" /></td>
+        <td class="col-1"><input type="number" id="b26" value="1" onClick="this.select();" /></td>
         <td class="col-5">
           <p>轻型：额外攻击+武器攻击力*(2.25+2.25*武器攻击力%+战术攻)<br />
             中型：额外攻击+武器攻击力*(3.0625+3.0625*武器攻击力%+战术攻)<br />
@@ -214,12 +216,12 @@
         </td>
       </tr>
       <tr class="row  justify-content-around align-content-center">
-        <td class="col-1"><input type="number" id="b31" value="1" /></td>
+        <td class="col-1"><input type="number" id="b31" value="1" onClick="this.select();" /></td>
         <td class="col-2">额外攻击力%</td>
-        <td class="col-1"><input type="number" id="b33" value="1" /></td>
-        <td class="col-1"><input type="number" id="b34" value="0.1" /></td>
-        <td class="col-1"><input type="number" id="b35" value="1" /></td>
-        <td class="col-1"><input type="number" id="b36" value="1" /></td>
+        <td class="col-1"><input type="number" id="b33" value="1" onClick="this.select();" /></td>
+        <td class="col-1"><input type="number" id="b34" value="0.1" onClick="this.select();" /></td>
+        <td class="col-1"><input type="number" id="b35" value="1" onClick="this.select();" /></td>
+        <td class="col-1"><input type="number" id="b36" value="1" onClick="this.select();" /></td>
         <td class="col-5">
           <p>轻型：额外攻击+武器攻击力*(2.25+2.25*武器攻击力%+战术攻)<br />
             中型：额外攻击+武器攻击力*(3.0625+3.0625*武器攻击力%+战术攻)<br />
@@ -228,12 +230,12 @@
         </td>
       </tr>
       <tr class="row  justify-content-around align-content-center">
-        <td class="col-1"><input type="number" id="b41" value="1" /></td>
+        <td class="col-1"><input type="number" id="b41" value="1" onClick="this.select();" /></td>
         <td class="col-2">战术攻</td>
-        <td class="col-1"><input type="number" id="b43" value="1" /></td>
-        <td class="col-1"><input type="number" id="b44" value="0.1" /></td>
-        <td class="col-1"><input type="number" id="b45" value="1" /></td>
-        <td class="col-1"><input type="number" id="b46" value="1" /></td>
+        <td class="col-1"><input type="number" id="b43" value="1" onClick="this.select();" /></td>
+        <td class="col-1"><input type="number" id="b44" value="0.1" onClick="this.select();" /></td>
+        <td class="col-1"><input type="number" id="b45" value="1" onClick="this.select();" /></td>
+        <td class="col-1"><input type="number" id="b46" value="1" onClick="this.select();" /></td>
         <td class="col-5">
           <p>轻型：额外攻击+武器攻击力*(2.25+2.25*武器攻击力%+战术攻)<br />
             中型：额外攻击+武器攻击力*(3.0625+3.0625*武器攻击力%+战术攻)<br />
@@ -242,53 +244,53 @@
         </td>
       </tr>
       <tr class="row  justify-content-around align-content-center">
-        <td class="col-1"><input type="number" id="b51" value="1" /></td>
+        <td class="col-1"><input type="number" id="b51" value="1" onClick="this.select();" /></td>
         <td class="col-2">攻击力倍率</td>
-        <td class="col-1"><input type="number" id="b53" value="1" /></td>
-        <td class="col-1"><input type="number" id="b54" value="0.1" /></td>
-        <td class="col-1"><input type="number" id="b55" value="1" /></td>
-        <td class="col-1"><input type="number" id="b56" value="1" /></td>
+        <td class="col-1"><input type="number" id="b53" value="1" onClick="this.select();" /></td>
+        <td class="col-1"><input type="number" id="b54" value="0.1" onClick="this.select();" /></td>
+        <td class="col-1"><input type="number" id="b55" value="1" onClick="this.select();" /></td>
+        <td class="col-1"><input type="number" id="b56" value="1" onClick="this.select();" /></td>
         <td class="col-5">攻击力倍率</td>
       </tr>
       <tr class="row  justify-content-around align-content-center">
-        <td class="col-1"><input type="number" id="b61" value="1" /></td>
+        <td class="col-1"><input type="number" id="b61" value="1" onClick="this.select();" /></td>
         <td class="col-2">持续伤害</td>
-        <td class="col-1"><input type="number" id="b63" value="1" /></td>
-        <td class="col-1"><input type="number" id="b64" value="0.1" /></td>
-        <td class="col-1"><input type="number" id="b65" value="1" /></td>
-        <td class="col-1"><input type="number" id="b66" value="1" /></td>
+        <td class="col-1"><input type="number" id="b63" value="1" onClick="this.select();" /></td>
+        <td class="col-1"><input type="number" id="b64" value="0.1" onClick="this.select();" /></td>
+        <td class="col-1"><input type="number" id="b65" value="1" onClick="this.select();" /></td>
+        <td class="col-1"><input type="number" id="b66" value="1" onClick="this.select();" /></td>
         <td class="col-5">1+持续伤害</td>
       </tr>
       <tr class="row  justify-content-around align-content-center">
-        <td class="col-1"><input type="number" id="b71" value="1" /></td>
+        <td class="col-1"><input type="number" id="b71" value="1" onClick="this.select();" /></td>
         <td class="col-2">燃烧层数</td>
-        <td class="col-1"><input type="number" id="b73" value="1" /></td>
-        <td class="col-1"><input type="number" id="b74" value="0.1" /></td>
-        <td class="col-1"><input type="number" id="b75" value="1" /></td>
-        <td class="col-1"><input type="number" id="b76" value="1" /></td>
+        <td class="col-1"><input type="number" id="b73" value="1" onClick="this.select();" /></td>
+        <td class="col-1"><input type="number" id="b74" value="0.1" onClick="this.select();" /></td>
+        <td class="col-1"><input type="number" id="b75" value="1" onClick="this.select();" /></td>
+        <td class="col-1"><input type="number" id="b76" value="1" onClick="this.select();" /></td>
         <td class="col-5">燃烧层数</td>
       </tr>
       <tr class="row  justify-content-around align-content-center">
-        <td class="col-1"><input type="number" id="b81" value="1" /></td>
+        <td class="col-1"><input type="number" id="b81" value="1" onClick="this.select();" /></td>
         <td class="col-2">爆炸因数</td>
-        <td class="col-1"><input type="number" id="b83" value="1" /></td>
-        <td class="col-1"><input type="number" id="b84" value="0.1" /></td>
-        <td class="col-1"><input type="number" id="b85" value="1" /></td>
-        <td class="col-1"><input type="number" id="b86" value="1" /></td>
+        <td class="col-1"><input type="number" id="b83" value="1" onClick="this.select();" /></td>
+        <td class="col-1"><input type="number" id="b84" value="0.1" onClick="this.select();" /></td>
+        <td class="col-1"><input type="number" id="b85" value="1" onClick="this.select();" /></td>
+        <td class="col-1"><input type="number" id="b86" value="1" onClick="this.select();" /></td>
         <td class="col-5">爆炸因数</td>
       </tr>
       <tr class="row  justify-content-around align-content-center">
-        <td class="col-1"><input type="number" id="b91" value="1" /></td>
+        <td class="col-1"><input type="number" id="b91" value="1" onClick="this.select();" /></td>
         <td class="col-2">联合比对</td>
-        <td class="col-1"><input type="number" id="b93" value="1" /></td>
-        <td class="col-1"><input type="number" id="b94" value="0.1" /></td>
-        <td class="col-1"><input type="number" id="b95" value="1" /></td>
-        <td class="col-1"><input type="number" id="b96" value="1" /></td>
+        <td class="col-1"><input type="number" id="b93" value="1" onClick="this.select();" /></td>
+        <td class="col-1"><input type="number" id="b94" value="0.1" onClick="this.select();" /></td>
+        <td class="col-1"><input type="number" id="b95" value="1" onClick="this.select();" /></td>
+        <td class="col-1"><input type="number" id="b96" value="1" onClick="this.select();" /></td>
         <td class="col-5">以上所有选中的项相乘</td>
       </tr>
       <tr class="row  justify-content-around align-content-center">
         <td class="col-12">
-          <input type="button" class="btn btn-primary" value="一建比对" onClick="bidui()" />
+          <input type="button" class="btn btn-primary" value="一键比对" onClick="bidui()" />
         </td>
       </tr>
     </table>
