ui调整，改为checked box

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <br>
     <table class="table">
       <tr class="row justify-content-around align-content-center font-weight-bold">
-        <td class="col-2  text-center"></td>
+        <td class="col-2 text-center"></td>
         <td class="col-1 text-center">合计</td>
         <td class="col-1 text-center">封印</td>
         <td class="col-1 text-center">自身</td>
@@ -178,18 +178,18 @@
     <table class="table">
       <h1>大标题</h1>
       <br>
-      <tr class="row justify-content-around align-content-center">
-        <td class="col-1">联合比对</td>
-        <td class="col-2">因素</td>
-        <td class="col-1">变动前效果</td>
-        <td class="col-1">变动量</td>
-        <td class="col-1">变动后效果</td>
-        <td class="col-1">生效变化</td>
-        <td class="col-5">生效方式</td>
+      <tr class="row justify-content-around align-content-center font-weight-bold">
+        <td class="col-1  text-center">联合比对</td>
+        <td class="col-2  text-center">因素</td>
+        <td class="col-1  text-center">变动前效果</td>
+        <td class="col-1  text-center">变动量</td>
+        <td class="col-1  text-center">变动后效果</td>
+        <td class="col-1  text-center">生效变化</td>
+        <td class="col-5  text-center">生效方式</td>
       </tr>
       <tr class="row  justify-content-around align-content-center">
-        <td class="col-1"><input type="number" id="b11" value="1" onClick="this.select();" /></td>
-        <td class="col-2">额外攻击力</td>
+        <td class="col-1 text-center"><input type="checkbox" checked="true" id="b11" value="1" onClick="this.select();" /></td>
+        <td class="col-2 text-center">额外攻击力</td>
         <td class="col-1"><input type="number" id="b13" value="1" onClick="this.select();" /></td>
         <td class="col-1"><input type="number" id="b14" value="10" onClick="this.select();" /></td>
         <td class="col-1"><input type="number" id="b15" value="1" onClick="this.select();" /></td>
@@ -202,8 +202,8 @@
         </td>
       </tr>
       <tr class="row  justify-content-around align-content-center">
-        <td class="col-1"><input type="number" id="b21" value="1" onClick="this.select();" /></td>
-        <td class="col-2">武器攻击力</td>
+        <td class="col-1   text-center"><input type="checkbox"  checked="true" id="b21" value="1" onClick="this.select();" /></td>
+        <td class="col-2   text-center ">武器攻击力</td>
         <td class="col-1"><input type="number" id="b23" value="1" onClick="this.select();" /></td>
         <td class="col-1"><input type="number" id="b24" value="10" onClick="this.select();" /></td>
         <td class="col-1"><input type="number" id="b25" value="1" onClick="this.select();" /></td>
@@ -216,8 +216,8 @@
         </td>
       </tr>
       <tr class="row  justify-content-around align-content-center">
-        <td class="col-1"><input type="number" id="b31" value="1" onClick="this.select();" /></td>
-        <td class="col-2">额外攻击力%</td>
+        <td class="col-1  text-center"><input type="checkbox"  checked="true" id="b31" value="1" onClick="this.select();" /></td>
+        <td class="col-2  text-center">额外攻击力%</td>
         <td class="col-1"><input type="number" id="b33" value="1" onClick="this.select();" /></td>
         <td class="col-1"><input type="number" id="b34" value="0.1" onClick="this.select();" /></td>
         <td class="col-1"><input type="number" id="b35" value="1" onClick="this.select();" /></td>
@@ -230,8 +230,8 @@
         </td>
       </tr>
       <tr class="row  justify-content-around align-content-center">
-        <td class="col-1"><input type="number" id="b41" value="1" onClick="this.select();" /></td>
-        <td class="col-2">战术攻</td>
+        <td class="col-1  text-center"><input type="checkbox"  checked="true" id="b41" value="1" onClick="this.select();" /></td>
+        <td class="col-2  text-center">战术攻</td>
         <td class="col-1"><input type="number" id="b43" value="1" onClick="this.select();" /></td>
         <td class="col-1"><input type="number" id="b44" value="0.1" onClick="this.select();" /></td>
         <td class="col-1"><input type="number" id="b45" value="1" onClick="this.select();" /></td>
@@ -244,8 +244,8 @@
         </td>
       </tr>
       <tr class="row  justify-content-around align-content-center">
-        <td class="col-1"><input type="number" id="b51" value="1" onClick="this.select();" /></td>
-        <td class="col-2">攻击力倍率</td>
+        <td class="col-1  text-center"><input type="checkbox"  checked="true" id="b51" value="1" onClick="this.select();" /></td>
+        <td class="col-2  text-center">攻击力倍率</td>
         <td class="col-1"><input type="number" id="b53" value="1" onClick="this.select();" /></td>
         <td class="col-1"><input type="number" id="b54" value="0.1" onClick="this.select();" /></td>
         <td class="col-1"><input type="number" id="b55" value="1" onClick="this.select();" /></td>
@@ -253,8 +253,8 @@
         <td class="col-5">攻击力倍率</td>
       </tr>
       <tr class="row  justify-content-around align-content-center">
-        <td class="col-1"><input type="number" id="b61" value="1" onClick="this.select();" /></td>
-        <td class="col-2">持续伤害</td>
+        <td class="col-1  text-center"><input type="checkbox"  checked="true" id="b61" value="1" onClick="this.select();" /></td>
+        <td class="col-2  text-center">持续伤害</td>
         <td class="col-1"><input type="number" id="b63" value="1" onClick="this.select();" /></td>
         <td class="col-1"><input type="number" id="b64" value="0.1" onClick="this.select();" /></td>
         <td class="col-1"><input type="number" id="b65" value="1" onClick="this.select();" /></td>
@@ -262,8 +262,8 @@
         <td class="col-5">1+持续伤害</td>
       </tr>
       <tr class="row  justify-content-around align-content-center">
-        <td class="col-1"><input type="number" id="b71" value="1" onClick="this.select();" /></td>
-        <td class="col-2">燃烧层数</td>
+        <td class="col-1  text-center"><input type="checkbox"  checked="true" id="b71" value="1" onClick="this.select();" /></td>
+        <td class="col-2  text-center">燃烧层数</td>
         <td class="col-1"><input type="number" id="b73" value="1" onClick="this.select();" /></td>
         <td class="col-1"><input type="number" id="b74" value="0.1" onClick="this.select();" /></td>
         <td class="col-1"><input type="number" id="b75" value="1" onClick="this.select();" /></td>
@@ -271,8 +271,8 @@
         <td class="col-5">燃烧层数</td>
       </tr>
       <tr class="row  justify-content-around align-content-center">
-        <td class="col-1"><input type="number" id="b81" value="1" onClick="this.select();" /></td>
-        <td class="col-2">爆炸因数</td>
+        <td class="col-1  text-center"><input type="checkbox"  checked="true" id="b81" value="1" onClick="this.select();" /></td>
+        <td class="col-2  text-center">爆炸因数</td>
         <td class="col-1"><input type="number" id="b83" value="1" onClick="this.select();" /></td>
         <td class="col-1"><input type="number" id="b84" value="0.1" onClick="this.select();" /></td>
         <td class="col-1"><input type="number" id="b85" value="1" onClick="this.select();" /></td>
@@ -280,8 +280,8 @@
         <td class="col-5">爆炸因数</td>
       </tr>
       <tr class="row  justify-content-around align-content-center">
-        <td class="col-1"><input type="number" id="b91" value="1" onClick="this.select();" /></td>
-        <td class="col-2">联合比对</td>
+        <td class="col-1  text-center"><input type="checkbox"  checked="true" id="b91" value="1" onClick="this.select();" /></td>
+        <td class="col-2  text-center">联合比对</td>
         <td class="col-1"><input type="number" id="b93" value="1" onClick="this.select();" /></td>
         <td class="col-1"><input type="number" id="b94" value="0.1" onClick="this.select();" /></td>
         <td class="col-1"><input type="number" id="b95" value="1" onClick="this.select();" /></td>
